# PptxToMp4

./: .gitignore  CMakeLists.txt
include/: DraggableListWidget.h  ImageRenamerWidget.h  Mp4VideoCreator.h  PdfConverter.h  PptxConverter.h  PptxToJpgConverter.h  PresentationBatchConverter.h  pch.h
src/: DraggableListWidget.cpp  ImageRenamerWidget.cpp  Mp4VideoCreator.cpp  PdfConverter.cpp  PptxConverter.cpp  PptxToJpgConverter.cpp  PresentationBatchConverter.cpp  main.cpp
